# fare

./: Cargo.toml  readme.md
bunde/: avstrategy.cc  bunde.cc  config.h  config.txt  func.cc  httpclient.h  libs.h  mac.txt  makefile.linux  makefile.mac  readme.md  strategy.cc  strategy.h  topvolume.cc
cunder/: Cargo.toml  config.json  ubuntu_config.json  windows_config.json
cunder/src/: aor.rs  config.rs  cunder.rs  define.rs  main.rs
ebackend/: Cargo.toml
ebackend/src/: backend.rs  lib.rs
fare/: Cargo.toml  config.json
fare/src/: aor.rs  config.rs  main.rs  shared.rs  worker.rs
foxy/: config.h  foxy.cc  foxy.txt  foxytts.txt  makefile  readme.md  ubuntu.txt
foxy/api/: httpclient.h
