[package]
name = "cunder"
authors = ["lengss"]
description = "A assistant for features writen in Rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.9"
glam = "0.24"
serde = {version="1.0", features = ["derive"]}
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
# ta = "0.4.0"
csv = "1.3"
chrono = "0.4"
tracing = {version="0.1", features=["std"]}
tracing-subscriber = {version="0.3", features=["fmt", "env-filter","time","local-time"]}
tracing-appender = {version="0.2"}
time = {version="0.3", features=["macros"]}
ansi_term = "0.12"
clap = { version = "4.0", features = ["cargo","derive"] }
