[package]
name = "fare"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ebackend = { path = "../ebackend" }
chrono = "0.4"
time = {version="0.3", features=["macros"]}
tokio= { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }

egui = "0.24" 
eframe = "0.24"
plotters = "0.3"
plotters-backend = "0.3"

csv = "1.3"
thiserror = "1.0"
anyhow = "1.0"
clap = { version = "4.0", features = ["cargo","derive"] }

serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1"

tracing-appender ={ version= "0.2"}
tracing = { version="0.1"}
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "time",
    "local-time",
    ] }
